# octy-services-wasm

./: .gitignore  DEPLOYMENT.md  README.md  pytest.ini  requirements.txt
.circleci/: config.yml
rust/: .gitignore  Cargo.toml  README.md
rust/crates/octy-shared/: Cargo.toml
rust/crates/octy-shared/src/: config.rs  ejson.rs  errors.rs  jwt.rs  lib.rs  models.rs  secrets.rs  sigv4.rs  utils.rs
rust/crates/octy-spin/: Cargo.toml
rust/crates/octy-spin/src/: auth.rs  aws.rs  ctx.rs  gateway.rs  http_util.rs  lib.rs
rust/gateway/octy-data-gateway/: Cargo.toml  Dockerfile
rust/gateway/octy-data-gateway/src/: amqp.rs  ejson.rs  main.rs  mongo.rs  s3.rs
rust/kubernetes/account/: account-spinapp.yml  data-gateway.yml
rust/kubernetes/admin/: admin-spinapp.yml
rust/kubernetes/billing/: billing-spinapp.yml  data-gateway.yml
rust/kubernetes/churn-prediction/: churn-prediction-spinapp.yml  data-gateway.yml
rust/kubernetes/churn-prediction-worker/: churn-prediction-worker-spinapp.yml  data-gateway.yml
rust/kubernetes/configurations/: configurations-spinapp.yml  data-gateway.yml
rust/kubernetes/events/: data-gateway.yml  events-spinapp.yml
rust/kubernetes/gateway/: gateway.yml
rust/kubernetes/items/: data-gateway.yml  items-spinapp.yml
rust/kubernetes/messaging/: data-gateway.yml  messaging-spinapp.yml
rust/kubernetes/octy-jobs/: data-gateway.yml  octy-jobs-spinapp.yml  scheduler-cronjob.yml
rust/kubernetes/profile-identification-worker/: data-gateway.yml  profile-identification-worker-spinapp.yml
rust/kubernetes/profiles/: data-gateway.yml  profiles-spinapp.yml
rust/kubernetes/recommendation/: data-gateway.yml  recommendation-spinapp.yml
rust/kubernetes/recommendation-worker/: data-gateway.yml  recommendation-worker-spinapp.yml
rust/kubernetes/rfm-worker/: data-gateway.yml  rfm-worker-spinapp.yml
rust/kubernetes/segmentation/: data-gateway.yml  segmentation-spinapp.yml
rust/kubernetes/segmentation-worker/: data-gateway.yml  segmentation-worker-spinapp.yml
rust/local-dev/: README.md  encode.sh  gateway-tenants.json
rust/local-dev/config/: account.config.json  account.secrets.json  admin.config.json  admin.secrets.json  billing.config.json  churn-prediction-worker.config.json  churn-prediction-worker.secrets.json  churn-prediction.config.json  churn-prediction.secrets.json  configurations.config.json  events.config.json  items.config.json  messaging.config.json  messaging.secrets.json  octy-jobs.config.json  octy-jobs.secrets.json  profile-identification-worker.config.json  profile-identification-worker.secrets.json  profiles.config.json  recommendation-worker.config.json  recommendation.config.json  rfm-worker.config.json  segmentation-worker.config.json  segmentation.config.json  segmentation.secrets.json
rust/local-dev/infra/: minio.yaml  mongo.yaml  namespace.yaml  rabbitmq.yaml  redis.yaml
rust/services/account/: Cargo.toml  spin.toml
rust/services/account/src/: amqp.rs  handlers.rs  http_util.rs  lib.rs
rust/services/account/src/repos/: account.rs  auth.rs  content.rs  mod.rs  notifications.rs
rust/services/account/src/services/: account.rs  auth.rs
rust/services/admin/: Cargo.toml  spin.toml
rust/services/admin/keys/: octy-public-key.pub
rust/services/admin/src/: handlers.rs  http_util.rs  lib.rs
rust/services/admin/src/configurations/: handlers.rs  http_util.rs  mod.rs  models.rs  repos.rs
rust/services/admin/src/repos/: versioning.rs
rust/services/billing/: Cargo.toml  spin.toml
rust/services/billing/src/: amqp.rs  handlers.rs  http_util.rs  lib.rs  models.rs
rust/services/billing/src/repos/: billing.rs  mod.rs
rust/services/billing/src/services/: billing.rs  mod.rs
rust/services/churn-prediction/: Cargo.toml  spin.toml
rust/services/churn-prediction/src/: handlers.rs  http_util.rs  lib.rs  models.rs  repos.rs  services.rs
rust/services/configurations/: Cargo.toml  spin.toml
rust/services/configurations/src/: handlers.rs  http_util.rs  lib.rs  models.rs  repos.rs
rust/services/events/: Cargo.toml  spin.toml
rust/services/events/src/: amqp.rs  gateway_ext.rs  handlers.rs  http_util.rs  lib.rs  models.rs
rust/services/events/src/repos/: event_types.rs  events.rs
rust/services/items/: Cargo.toml  spin.toml
rust/services/items/src/: errors.rs  handlers.rs  http_util.rs  lib.rs  models.rs
rust/services/messaging/: Cargo.toml  spin.toml
rust/services/messaging/src/: currency.rs  handlers.rs  http_util.rs  lib.rs  models.rs
rust/services/octy-jobs/: Cargo.toml  spin.toml
rust/services/octy-jobs/src/: amqp.rs  gw.rs  handlers.rs  http_util.rs  lib.rs  models.rs
rust/services/profiles/: Cargo.toml  spin.toml
rust/services/profiles/src/: amqp.rs  gateway_ext.rs  handlers.rs  http_util.rs  lib.rs  models.rs  utils.rs
rust/services/recommendation/: Cargo.toml  spin.toml
rust/services/recommendation/src/: amqp.rs  handlers.rs  http_util.rs  lib.rs  models.rs
rust/services/segmentation/: Cargo.toml  spin.toml
rust/services/segmentation/src/: amqp.rs  handlers.rs  http_util.rs  lib.rs  models.rs
rust/workers/churn-prediction/: Cargo.toml  spin.toml
rust/workers/churn-prediction/src/: amqp.rs  billing.rs  bucket.rs  encode.rs  frame.rs  kmeans.rs  knee.rs  lib.rs  models.rs  pipeline_complete.rs  pipeline_training.rs  sagemaker.rs  util.rs  xgb.rs
rust/workers/profile-identification/: Cargo.toml  spin.toml
rust/workers/profile-identification/src/: amqp.rs  billing.rs  http.rs  job.rs  lib.rs  matching.rs  models.rs  repos.rs
rust/workers/recommendation/: Cargo.toml  spin.toml
rust/workers/recommendation/src/: amqp.rs  artifacts.rs  billing.rs  frame.rs  http.rs  lib.rs  models.rs  sagemaker.rs  tar_gz.rs  utils.rs
rust/workers/rfm/: Cargo.toml  spin.toml
rust/workers/rfm/src/: amqp.rs  billing.rs  complete.rs  csv_util.rs  lib.rs  ml.rs  models.rs  rfm_repository.rs  s3.rs  sagemaker.rs  training.rs  util.rs
rust/workers/segmentation/: Cargo.toml  spin.toml
rust/workers/segmentation/src/: amqp.rs  billing.rs  engine.rs  lib.rs  models.rs  pyval.rs  repository.rs
(+496 files in other folders)
