[package]
name = "octy-shared"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
uuid.workspace = true
chrono.workspace = true
regex-lite.workspace = true
url.workspace = true
rsa.workspace = true
sha2.workspace = true
hmac.workspace = true
argon2.workspace = true

[dev-dependencies]
rand = "0.8"
