[package]
name = "octy-spin"
version.workspace = true
edition.workspace = true
publish = false

# wasm32-only (spin-sdk): shared plumbing for the Spin service components.

[dependencies]
octy-shared.workspace = true

spin-sdk = "3"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
chrono.workspace = true
url.workspace = true
