[package]
name = "octy-data-gateway"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "octy-data-gateway"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
base64.workspace = true

axum = "0.7"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

mongodb = "3"
lapin = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
