[package]
name = "profile-identification-worker"
version.workspace = true
edition.workspace = true
publish = false

# Rust/WASM port of `workers/profile_identification/`.

[lib]
crate-type = ["cdylib"]

[dependencies]
octy-shared.workspace = true
octy-spin.workspace = true

spin-sdk.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
chrono.workspace = true
uuid.workspace = true
regex-lite.workspace = true
