[package]
name = "rfm-worker"
version.workspace = true
edition.workspace = true
publish = false

# Rust/WASM port of `workers/rfm/`.

[lib]
crate-type = ["cdylib"]

[dependencies]
octy-shared.workspace = true
octy-spin.workspace = true

spin-sdk.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
chrono.workspace = true
uuid.workspace = true
regex-lite.workspace = true

# CSV encoding for the training dataset (replaces pandas.DataFrame.to_csv).
csv = "1.3"
# tar/gzip decoding for SageMaker's `model.tar.gz` output (pure-Rust backend
# so it compiles for wasm32-wasip1; no zlib-sys / cc dependency).
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"
